updating loading animations, fixing hero z-index, fixing intro height

--- a/src/components/Header/Nav/style.css
+++ b/src/components/Header/Nav/style.css
@@ -1,6 +1,7 @@
 .nav {
 	display: flex;
 	justify-content: flex-end;
+	animation: fade-in 1.5s ease-in-out both;
 }
 
 .nav-item {
